Finally maybe fix mask button alignment in popup

--- a/popup.css
+++ b/popup.css
@@ -51,6 +51,7 @@ details > summary {
 }
 button.unmask {
   text-align:center;
+  vertical-align:top;
   height:24px;
   width:24px;
 }
